# rag-job-search-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: architecture.mermaid
data/: sample_jobs.csv
src/: __init__.py  cover_letter.py  job_fetcher.py  matcher.py  profile_extractor.py  resume_parser.py
tests/: test_core.py
